--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ ul {
   margin-right: 94px;
 
   color: var(--accent-color);
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
@@ -74,20 +74,26 @@ ul {
 
   color: var(--primary-text-color);
 
-  font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header .link.current {
+  position: relative;
+
   color: var(--accent-color);
 }
 .header .link.current::after {
   content: '';
   display: block;
   position: absolute;
+  left: 0;
   bottom: 0;
 
   height: 4px;
@@ -116,12 +122,15 @@ ul {
 
   color: var(--secondary-text-color);
   fill: #757575;
-  font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link-icon {
   margin-right: 10px;
@@ -160,7 +169,6 @@ ul {
   margin-bottom: 0;
 
   color: #ffffff;
-  font-family: Roboto;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
@@ -174,7 +182,7 @@ ul {
   margin-top: 30px;
 
   background-color: var(--accent-color);
-  font-family: Roboto;
+
   color: #ffffff;
   font-weight: 700;
   font-size: 16px;
@@ -186,10 +194,14 @@ ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 0;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero .button:hover,
 .button:focus {
-  background: #188ce8;
+  background-color: #188ce8;
 }
 /* features */
 .features .features-list {
@@ -231,7 +243,6 @@ ul {
   margin-bottom: 0px;
 
   color: var(--primary-text-color);
-  font-family: Roboto;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -242,7 +253,6 @@ ul {
   margin-bottom: 0;
 
   color: var(--secondary-text-color);
-  font-family: Roboto;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
@@ -264,7 +274,6 @@ ul {
   margin-bottom: 0;
 
   color: var(--primary-text-color);
-  font-family: Roboto;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
@@ -324,7 +333,6 @@ ul {
   margin-top: 0;
   margin-bottom: 0;
   color: var(--primary-text-color);
-  font-family: Roboto;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
@@ -335,7 +343,6 @@ ul {
   margin-bottom: 0;
 
   color: var(--primary-text-color);
-  font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2x;
@@ -346,7 +353,6 @@ ul {
   margin-bottom: 0;
 
   color: var(--secondary-text-color);
-  font-family: Roboto;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.2x;
@@ -366,6 +372,10 @@ ul {
   border-radius: 50%;
 
   fill: #afb1b8;
+
+  transition-property: border-radius, background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-networks-list:not(:last-child) {
   margin-right: 10px;
@@ -384,7 +394,6 @@ ul {
   margin-top: 94px;
   margin-bottom: 0;
   color: var(--primary-text-color);
-  font-family: Roboto;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.167;
@@ -408,6 +417,10 @@ ul {
   fill: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+
+  transition-property: border, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients .clients-links:hover,
 .clients .clients-links:focus {
@@ -425,7 +438,7 @@ ul {
 }
 .footer .logo {
   display: inline-block;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
@@ -442,7 +455,6 @@ ul {
 }
 .footer .map {
   color: #ffffff;
-  font-family: Roboto;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
@@ -453,7 +465,6 @@ ul {
   margin-top: 9px;
 
   color: rgba(255, 255, 255, 0.6);
-  font-family: Roboto;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
@@ -489,6 +500,10 @@ ul {
 
   background-color: rgba(255, 255, 255, 0.1);
   fill: #ffffff;
+
+  transition-property: border-radius, background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-networks-list:not(:last-child) {
   margin-right: 10px;
@@ -498,6 +513,57 @@ ul {
   border-radius: 50%;
   background-color: var(--accent-color);
   fill: #ffffff;
+}
+/* modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.2);
+
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 528px;
+  height: 581px;
+
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+.modal .modal-button {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  padding: 5px;
+
+  width: 30px;
+  height: 30px;
+
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
 
 /* --page portfolio-- */
@@ -516,7 +582,6 @@ ul {
 .filter .link-filter {
   padding: 6px 22px;
 
-  font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
@@ -526,10 +591,14 @@ ul {
   background: #f5f4fa;
   border-radius: 4px;
   border: 0;
+
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter .link-filter:hover,
 .link-filter:focus {
-  background: var(--accent-color);
+  background-color: var(--accent-color);
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -542,7 +611,6 @@ ul {
 
 .portfolio .content-items {
   width: calc((100% - 60px) / 3);
-  /* border: 1px solid #eeeeee; */
 }
 .portfolio .content-items:not(:nth-child(3n)) {
   margin-right: 30px;
@@ -557,6 +625,10 @@ ul {
   border: 1px solid #eeeeee;
   text-decoration: none;
   padding-bottom: 20px;
+
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .content .link:hover,
 .content .link:focus {
@@ -569,12 +641,10 @@ ul {
   padding-left: 24px;
 
   color: var(--primary-text-color);
-  font-family: Roboto;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  /* text-align: center; */
 }
 .content .type {
   margin-top: 4px;
@@ -582,9 +652,56 @@ ul {
   padding-left: 24px;
 
   color: var(--secondary-text-color);
-  font-family: Roboto;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.8;
-  /* text-align: center; */
+}
+.content-overlay {
+  position: relative;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.content-overlay::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  background: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+
+  transition-property: opacity, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+}
+.content .link:hover .content-overlay::before,
+.content .link:focus .content-overlay::before {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.content-overlay > .description {
+  position: absolute;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-right: 24px;
+  padding-left: 24px;
+
+  font-size: 18px;
+  line-height: 1.555;
+  color: #ffffff;
+  opacity: 0;
+
+  transition-property: opacity, transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+}
+
+.content .link:hover .description,
+.content .link:focus .description {
+  opacity: 1;
+  transform: translateY(0);
 }
